# go/api/api/openapi.yaml
@@ -2866,12 +2866,6 @@ components:
         lut3d_1:
           $ref: '#/components/schemas/Stage'
       type: object
-    AcesMode:
-      default: AMF
-      enum:
-      - AMF
-      - OCIO
-      type: string
     AcesIdt:
       default: ARRI LogC3 (EI800)
       enum:
@@ -2906,8 +2900,6 @@ components:
         enabled:
           description: true if stage is enabled else disabled (unity passthru)
           type: boolean
-        mode:
-          $ref: '#/components/schemas/AcesMode'
         amfLibraryEntry:
           description: library entry number, zero is unity bypass
           type: integer
@@ -2970,24 +2962,16 @@ components:
       type: object
     Status:
       example:
-        colorfrontTransformVersion: colorfrontTransformVersion
-        systemAppSwVersion: systemAppSwVersion
-        licenseActive: true
         eulaAccepted: true
         colorfrontEngineLicensed: true
         systemUptime: systemUptime
         systemCatalogNumber: systemCatalogNumber
-        orionEngineLicensed: true
-        systemBoardRevision: systemBoardRevision
         orionVersion: orionVersion
-        nbcuLutVersion: nbcuLutVersion
         acesVersion: acesVersion
         systemTime: systemTime
         colorfrontEngineVersion: colorfrontEngineVersion
+        hardwareVariant: hardwareVariant
         systemOsName: systemOsName
-        systemSerialNumber: systemSerialNumber
-        bbcLutVersion: bbcLutVersion
-        systemDate: systemDate
         deviceDieTemp:
           upperBoundGood: 0.8008281904610115
           label: label
@@ -2996,11 +2980,22 @@ components:
           value: value
           extraValue: extraValue
           upperBoundMaybe: 6.027456183070403
-        cpuBusy: true
         shutdownTime: 5
         systemSupportInfo: systemSupportInfo
         resetTime: 5
+        colorfrontTransformVersion: colorfrontTransformVersion
+        systemAppSwVersion: systemAppSwVersion
+        licenseActive: true
+        orionEngineLicensed: true
+        systemBoardRevision: systemBoardRevision
+        nbcuLutVersion: nbcuLutVersion
+        hardwareName: hardwareName
+        systemSerialNumber: systemSerialNumber
+        bbcLutVersion: bbcLutVersion
+        systemDate: systemDate
+        cpuBusy: true
         bbcLutsLicensed: true
+        ogRearModuleValid: true
       properties:
         deviceDieTemp:
           $ref: '#/components/schemas/StatusInfo'
@@ -3050,6 +3045,12 @@ components:
           type: boolean
         acesVersion:
           type: string
+        hardwareVariant:
+          type: string
+        hardwareName:
+          type: string
+        ogRearModuleValid:
+          type: boolean
       type: object
     AncCaptureFilter:
       example:
